--- a/back/build.gradle
+++ b/back/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -33,6 +34,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'				// mapping용 으로 추가 pjs 0829
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final' // mapping용 으로 추가 pjs 0829
 }
 
 tasks.named('test') {
