Feat : 개발환경 세팅

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,6 @@
     "jsx": "react-jsx",
     "noImplicitAny": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "images.d.ts"],
   "exclude": ["node_modules"]
 }
