--- a/back/build.gradle
+++ b/back/build.gradle
@@ -39,6 +39,12 @@ dependencies {
 	implementation 'org.webjars:sockjs-client:1.1.2'
 	implementation 'org.webjars:stomp-websocket:2.3.3-1'
 
+	implementation 'org.webjars:webjars-locator-core'
+	implementation 'org.webjars:sockjs-client:1.0.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.webjars:bootstrap:3.4.0'
+	implementation 'org.webjars:jquery:3.5.0'
+
 
 
 }
