"불필요한 마이페이지(예약리스트)/예약페이지 삭제"

--- a/back/build.gradle
+++ b/back/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
 	implementation 'net.nurigo:sdk:4.2.7'
 
-	implementation 'com.squareup.retrofit2:retrofit:2.7.0' //Retrofit 버전
+	implementation 'com.squareup.retrofit2:retrofit:2.7.0'
 
 }
 
