--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
     username: sa
     password:
   h2:
     console:
       enabled: true
+      path: /h2
   redis:
     host: localhost
     port: 6397
