--- a/back/.gitignore
+++ b/back/.gitignore
@@ -18,13 +18,16 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-.idea
+
 *.iws
 *.iml
 *.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.DS_Store
+.idea/
+package-lock.json
 
 ### NetBeans ###
 /nbproject/private/
