--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
