--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "build": "react-scripts build",
     "lint:styled": "stylelint './src/**/*.styles.ts' --fix",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -69,5 +70,9 @@
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "typescript": "^4.9.5"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.css": "stylelint --fix"
   }
 }
