nav수정 및 추가라이브러리설치

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,7 +17,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "strictNullChecks": false  //추가 규칙 <undefined error 방지.
   },
   "include": ["src/**/*", "images.d.ts"],
   "exclude": ["node_modules"]
