--- a/back/.gitignore
+++ b/back/.gitignore
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-.idea
+
 *.iws
 *.iml
 *.ipr
@@ -26,6 +26,9 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.DS_Store
+.idea/
+package-lock.json
 
 ### NetBeans ###
 /nbproject/private/
