--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -16,10 +16,10 @@ spring:
       client:
         registration:
           kakao:
-            client_id:
-            client_secret:
+            client_id: d7277e7d8ca7f14249d159840400ce09
+            client_secret: NTD6r2mzx8esgO5DFtqMBJoVZDAdKqGJ
             authorization-grant-type: authorization_code
-            redirect_uri:
+            redirect_uri: http://localhost:8080/oauth/kakao
             client-name: Kakao
         provider:
           kakao:
@@ -33,22 +33,15 @@ jwt:
   refresh-token-expiration-minutes: 420
 coolsms:
   api:
-    key:
-    secret:
-#spring:
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2
-#  datasource:
-#    url: jdbc:h2:mem:test
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-##  sql:
-##    init:
-##      data-locations: classpath*:db/h2/data.spl
+    key: NCSLTCK9OAJOTYYD
+    secret: DTZTGYAIEMFL8PBL9I3FLSSBVDZ98LRS
+logging:
+  pattern:
+    console: "%white([%d{yyyy-MM-dd HH:mm:ss}]) %yellow([%thread]) %highlight([%-5level]) %white([%-35logger{35}]) %white(%msg  %n)"
+  level:
+    root: DEBUG
+    jpa: DEBUG
+    org:
+      springframework:
+        orm:
+          jpa: DEBUG
