--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,11 +12,13 @@
 /build
 
 # misc
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.DS_Store
+.idea/
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
