--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-calendar": "^4.1.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "daterangepicker": "^3.1.0",
+    "jquery": "^3.7.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
+    "react-daterangepicker": "^0.1.2",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
