feat #06 게시글에 멤버 정보 가져오기 - 3

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       client:
         registration:
           kakao:
-            client_id: sadfsadfsadfsad
+            client_id: sadfsadfsad
             client_secret: sdfdsafdsafsadf
             authorization-grant-type: authorization_code
             redirect_uri: asfsadfsafasdf
