--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,47 +1,3 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:test
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: true
-      path: /h2
-  redis:
-    host: localhost
-    port: 6397
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client_id: d7277e7d8ca7f14249d159840400ce09
-            client_secret: NTD6r2mzx8esgO5DFtqMBJoVZDAdKqGJ
-            authorization-grant-type: authorization_code
-            redirect_uri: http://localhost:8080/oauth/kakao
-            client-name: Kakao
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-jwt:
-  key: codestatescodestates123123123123123123123123123
-  access-token-expiration-minutes: 10
-  refresh-token-expiration-minutes: 420
-coolsms:
-  api:
-    key: NCSLTCK9OAJOTYYD
-    secret: DTZTGYAIEMFL8PBL9I3FLSSBVDZ98LRS
-logging:
-  pattern:
-    console: "%white([%d{yyyy-MM-dd HH:mm:ss}]) %yellow([%thread]) %highlight([%-5level]) %white([%-35logger{35}]) %white(%msg  %n)"
-  level:
-    root: DEBUG
-    jpa: DEBUG
-    org:
-      springframework:
-        orm:
-          jpa: DEBUG
+  profiles:
+    active: server
