#14예약글 작성 수정

--- a/client/package.json
+++ b/client/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react-calendar": "^4.1.0",
+    "@types/axios": "^0.14.0",
     "axios": "^1.5.0",
-    "cors": "^2.8.5",
-    "daterangepicker": "^3.1.0",
-    "jquery": "^3.7.1",
-    "moment": "^2.29.4",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
-    "react-daterangepicker": "^0.1.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,7 +53,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios-mock-adapter": "^1.21.5",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
