--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,54 +1,3 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:test
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: true
-      path: /h2
-  redis:
-    host: localhost
-    port: 6397
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client_id:
-            client_secret:
-            authorization-grant-type: authorization_code
-            redirect_uri:
-            client-name: Kakao
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-jwt:
-  key: codestatescodestates123123123123123123123123123
-  access-token-expiration-minutes: 10
-  refresh-token-expiration-minutes: 420
-coolsms:
-  api:
-    key:
-    secret:
-#spring:
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2
-#  datasource:
-#    url: jdbc:h2:mem:test
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
-##  sql:
-##    init:
-##      data-locations: classpath*:db/h2/data.spl
+  profile:
+    active: server
