--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
+    "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
     "stomp": "^0.1.1",
     "stompjs": "^2.3.3",
@@ -64,6 +65,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
