--- a/back/build.gradle
+++ b/back/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	implementation 'org.webjars:bootstrap:3.4.0'
 	implementation 'org.webjars:jquery:3.5.0'
 
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
 
 
 }
