--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 
-REACT_APP_DB_HOST="http://ec2-3-35-193-208.ap-northeast-2.compute.amazonaws.com:8080"
+REACT_APP_DB_HOST="https://8d24-121-162-236-116.ngrok-free.app"
