--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-js-pagination": "^3.0.4",
     "aws-sdk": "^2.1457.0",
+    "@types/react-modal": "^3.16.0",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.46.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
