--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_DB_HOST="http://ec2-3-35-193-208.ap-northeast-2.compute.amazonaws.com:8080"
+REACT_APP_DB_HOST="https://08a8-218-155-160-190.ngrok-free.app"
