--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
