css수정및태그

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-js-pagination": "^3.0.3",
