--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@types/react-js-pagination": "^3.0.4",
     "aws-sdk": "^2.1457.0",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "flatpickr": "^4.6.13",
     "moment": "^2.29.4",
