--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
     "eslint": "^8.48.0",
